--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^5.8.4",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
+    "formik": "^2.4.5",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,7 +19,8 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
