--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "web-vitals": "^2.1.4",
     "yup": "^1.3.0"
   },
+  "engines": {
+    "node": "18.16.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
