--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "node": "18.16.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
