--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "yup": "^1.3.0"
   },
   "engines": {
-    "node": "18.16.0"
+    "node": ">=14.20.1"
   },
   "scripts": {
     "predeploy": "npm run build",
