--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "@mui/material": "^5.14.11",
     "@mui/styled-engine-sc": "^5.14.11",
     "@reduxjs/toolkit": "^1.9.6",
+    "@syncfusion/ej2": "^23.1.40",
+    "@syncfusion/ej2-react-calendars": "^23.1.40",
+    "@syncfusion/ej2-react-charts": "^23.1.40",
+    "@syncfusion/ej2-react-schedule": "^23.1.40",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
